[package]
name = "type-census"
version = "0.1.0"
edition = "2021"
description = "Track the number of extant instances of your types."
license = "MIT/Apache-2.0"
repository = "https://github.com/jswrenn/type-census"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.2.0"
once_cell = "1.10.0"
rustc-hash = "1.1.0"
